<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createGameButton"
        style="@style/BlueBackgroundButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/create_room"
        app:layout_constraintEnd_toStartOf="@+id/joinGameButton"
        app:layout_constraintTop_toTopOf="@+id/joinGameButton"
        android:fontFamily="@font/lora_regular"
        android:textSize="24sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinGameButton"
        style="@style/BlueBackgroundButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/lora_regular"
        android:text="@string/join_room"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitButton"
        style="@style/BlueBackgroundButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/joinGameButton"
        app:layout_constraintTop_toTopOf="@+id/joinGameButton"
        android:fontFamily="@font/lora_regular"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_description"
        />
</androidx.constraintlayout.widget.ConstraintLayout>