<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <TextView
        android:id="@+id/waitPlayersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wait_players"
        style="@style/TitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/playersTextView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="216dp"
        android:text="@string/current_players"
        style="@style/WaitingRoomTextHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/nameOfRoomTextView"
        app:layout_constraintTop_toBottomOf="@+id/waitPlayersTextView"
        app:layout_constraintVertical_bias="0.026" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/waitingPlayersRecyclerView"
        android:layout_width="168dp"
        android:layout_height="87dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersTextView" />

    <TextView
        android:id="@+id/roomTextView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_of_room"
        style="@style/WaitingRoomTextHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitPlayersTextView"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/nameOfRoomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="20dp"
        android:text="Nazwa pokoju"
        style="@style/WaitingRoomTextConent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomTextView" />


    <TextView
        android:id="@+id/RoomCodePointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rooms_code"
        style="@style/WaitingRoomTextHeader"
        app:layout_constraintBottom_toBottomOf="@+id/roomTextView"
        app:layout_constraintEnd_toStartOf="@+id/roomTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roomTextView" />

    <TextView
        android:id="@+id/enterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="enterCode"
        style="@style/WaitingRoomTextConent"
        app:layout_constraintBottom_toBottomOf="@+id/nameOfRoomTextView"
        app:layout_constraintStart_toStartOf="@+id/RoomCodePointer"
        app:layout_constraintTop_toTopOf="@+id/nameOfRoomTextView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="60dp"
        android:text="@string/start_game"
        style="@style/RoundedMaroonButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leaveGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="60dp"
        android:text="@string/leave_room"
        style="@style/RoundedMaroonButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startGameButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
