<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <TextView
        android:id="@+id/joinRoomTextView"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Join Room"
        style="@style/TitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout2"

        style="@style/TextInputLayoutStyle"
        android:layout_width="274dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/joinRoomTextView"
        app:layout_constraintStart_toStartOf="@+id/joinRoomTextView"
        app:layout_constraintTop_toBottomOf="@+id/joinRoomTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNicknameEditText"
            style="@style/InputEditTextStyle"
            android:hint="@string/enter_room_nickname"
            android:inputType="text"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        style="@style/TextInputLayoutStyle"
        android:layout_width="274dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNameEditText"
            style="@style/InputEditTextStyle"
            android:hint="@string/enter_room_code"
            android:inputType="text"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout4"
        style="@style/TextInputLayoutStyle"
        android:layout_width="274dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPasswordEditText"
            style="@style/InputEditTextStyle"
            android:hint="@string/enter_room_password"
            android:inputType="textPassword"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/joinRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/maroon"
        android:fontFamily="@font/lora_regular"
        android:text="@string/join_room"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="50px"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        tools:layout_editor_absoluteX="671dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>